--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,8 @@
 		<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
 		<link rel="apple-touch-icon" href="logo192.png" />
 
+		<link href="https://fonts.googleapis.com/css?family=Slabo+27px&display=swap" rel="stylesheet">
+
 		<!--
 		| manifest.json provides metadata used when your web app is installed on a
 		| user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
